--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html >
 
 <head>
   <meta charset="UTF-8">
@@ -123,18 +123,17 @@
       </div>
       <div class="col-md-6">
         <h3>Explore & Connect</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente animi non repellendus repudiandae earum ea in, labore hic temporibus et?</p>
-        <div class="d-flex">
+        <p>100 Free  accounts fpr MSME</p>
           <div class="p-4 align-self-start">
             <i class="fas fa-check fa-2x"></i>
           </div>
-          <div class="p-4 align-self-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+          <div class="p-4 align-self-end">1 Year free membership for everyone</div>
         </div>
         <div class="d-flex">
           <div class="p-4 align-self-start">
             <i class="fas fa-check fa-2x"></i>
           </div>
-          <div class="p-4 align-self-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+          <div class="p-4 align-self-end">Free accounts for newly opened startups untill the first 4 years </div>
         </div>
         <div class="d-flex">
           <div class="p-4 align-self-start">
