Updating index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="p-4 align-self-start">
             <i class="fas fa-check fa-2x"></i>
           </div>
-          <div class="p-4 align-self-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+          <div class="p-4 align-self-end">Experience the commitment. </div>
         </div>
       </div>
     </div>
