--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
- <!-- PopperJS-->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
   crossorigin="anonymous"></script> 
   <!-- Bootstrap-->
@@ -121,11 +120,11 @@
     <div class="row">
       <div class="col-md-6">
       </div>
+
       <div class="col-md-6">
-        <h3>Explore & Connect</h3>
-        <p>100 Free  accounts fpr MSME</p>
-          <div class="p-4 align-self-start">
-            <i class="fas fa-check fa-2x"></i>
+          <div class="d-flex"> 
+        <div class="p-4 align-self-end">
+            <i class="fas fa-check fa-2x"></i>   
           </div>
           <div class="p-4 align-self-end">1 Year free membership for everyone</div>
         </div>
