--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -110,6 +110,7 @@
           <a href="" class="btn btn-primary p-xl-4 p-sm-2">Find Out More</a>
       </div>
     </div>
+  </div>
   </section>
 </div>
 <!-- END EXPLORE HEAD-->
@@ -259,7 +260,7 @@
         <img class="d-block w-100" src="https://www.zohowebstatic.com/sites/default/files/mail/home/security-image.png" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://www.zohowebstatic.com/sites/default/files/Basic_0.png"Third slide">
+        <img class="d-block w-100" src="https://www.zohowebstatic.com/sites/default/files/Basic_0.png" alt=Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -281,7 +282,7 @@
         <h3>SocialApp</h3>
         <p>Copyright &copy; <span id="year"></span></p>
         <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contanct Us</button>
-  </div>
+  </div></div></div>
 </footer>
 
 <!-- Contact Modal-->
@@ -305,7 +306,7 @@
            <input type="email" class="form-control">
           </div>
            <div class="form-group">
-           <label for="message">Message</label>
+           <label for id="message">Message</label>
            <textarea class="form-control"></textarea>
           </div>
         </form>
