--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <img class="d-block w-100" src="https://www.zohowebstatic.com/sites/default/files/mail/home/security-image.png" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://www.zohowebstatic.com/sites/default/files/Basic_0.png" alt=Third slide">
+        <img class="d-block w-100" src="https://www.zohowebstatic.com/sites/default/files/Basic_0.png" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
