--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="dark-overlay">
     <div class="home-inner container">
       <div class="row">
-        <div class="col-lg-8 d-none d-lg-block ">
+        <div class="col-lg-8 col-sm-4 d-none d-sm-block d-lg-block ">
           <h1 class="display-4">Secure <strong>email hosting</strong> for your <strong>Business</strong></h1>
             <div class="d-inline-flex">
               <div class="p-4 align-self-start">
@@ -294,10 +294,7 @@
   </div>
 
 
-  <div class="mapouter align-self-center">
-    <div class="gmap_canvas center"><iframe width="100%" height="72%" id="gmap_canvas" src="https://www.google.com/maps/place/B2B/@12.9238152,77.6352946,19z/data=!4m8!1m2!2m1!1sB2B!3m4!1s0x0:0xd9633c2c597c50a3!8m2!3d12.9233126!4d77.6361195"
-        frameborder="0" scrolling="no" ></iframe></div>
-  </div>
+  <div class="mapouter"><div class="gmap_canvas"><iframe width="1200" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20san%20francisco&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/best-wordpress-themes/"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1200px;}</style></div>
 
   <!-- Footer-->
 <footer id="main-footer" class="bg-dark">
